added mediastyles, took out commented code in JS that was old test code, reworked some html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/mediastyles.css">
     <link href="https://fonts.googleapis.com/css?family=Eczar|Lato:400,700" rel="stylesheet">
 </head>
 <body>
@@ -36,10 +37,10 @@
                 <input type="number" id="oneInput">
                 <p>Quarters</p>
                 <input type="number" id="quarterInput">
-                <p>Assume Dimes and Nickels are five dollars in value</p>
+                <h4>Assume Dimes and Nickels are five dollars in value</h4>
                 <div class="cashoutputcontainer">
                     <button id="cashCalculate">Calculate</button>
-                    <p>Cash in the register</p>
+                    <h4>Cash in the register</h4>
                     <p id="cashOutput"></p>
                 </div>
             </div>
@@ -48,6 +49,8 @@
                 <h1>Replenish the register</h1>
                 <div class="replenishflexbox">
                     <div id="replenish">
+                    </div>
+                    <div class="borderlinemediastyle">
                     </div>
                     <div id="registertotal">
                     </div>
