Changed wording on first header in replenish the register section to be more accurate in defining the task

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="replenishcontainer">
                 <h1>Replenish the register</h1>
-                <h4>Cash to take out of the register</h4>
+                <h4>Cash to exchange with the briefcase</h4>
                 <p id="cashdifference"></p>
                 <div class="replenishheader">
                     <h2>Add to Float</h2>
